Base implementation for CharactersViewModel