@@ -58,8 +58,14 @@ android {
     }
 }
 
-dependencies {
+tasks.withType(Test) {
+    /**
+     * fix for retrofit https://github.com/square/retrofit/issues/3341
+     */
+    jvmArgs = ["--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED"]
+}
 
+dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
@@ -69,10 +75,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
+    testImplementation "androidx.test:core:1.4.0"
+    testImplementation 'org.mockito:mockito-core:4.4.0'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    testImplementation 'io.mockk:mockk:1.12.3'
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:4.6.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.6'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
